Update conversion functionality-in-progress

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,8 +19,8 @@
             <label for="listInput">Paste the list here:</label>
             <textarea name="listInput" id="listInput" cols="30" rows="5"></textarea>
             <button class="convertListButton" id="convertList" type="button">Convert</button>
-            <label for="stringsOutput">Formatted list:</label>
-            <textarea name="stringsOutput" id="stringsOutput" cols="30" rows="5"></textarea>
+            <label for="listOutput">Formatted list:</label>
+            <textarea class="formattedText" name="listOutput" id="listOutput" cols="30" rows="5"></textarea>
             <button class="copyButton" id="copyButton" type="button">Copy</button>
         </div>
 
@@ -28,8 +28,8 @@
             <label for="nodesInput">Paste the nodes here:</label>
             <textarea name="nodesInput" id="nodesInput" cols="30" rows="5"></textarea>
             <button class="convertNodesButton" id="convertNodes" type="button">Convert</button>
-            <label for="stringsOutput">Formatted nodes:</label>
-            <textarea name="stringsOutput" id="stringsOutput" cols="30" rows="5"></textarea>
+            <label for="nodesOutput">Formatted nodes:</label>
+            <textarea class="formattedText" name="nodesOutput" id="nodesOutput" cols="30" rows="5"></textarea>
             <button class="copyButton" id="copyButton" type="button">Copy</button>
         </div>
 
@@ -37,8 +37,8 @@
             <label for="stepsInput">Paste the steps here:</label>
             <textarea name="stepsInput" id="stepsInput" cols="30" rows="5"></textarea>
             <button class="convertStepsButton" id="convertSteps" type="button">Convert</button>
-            <label for="stringsOutput">Formatted steps:</label>
-            <textarea name="stringsOutput" id="stringsOutput" cols="30" rows="5"></textarea>
+            <label for="stepsOutput">Formatted steps:</label>
+            <textarea class="formattedText" name="stepsOutput" id="stepsOutput" cols="30" rows="5"></textarea>
             <button class="copyButton" id="copyButton" type="button">Copy</button>
         </div>
 
