Add proper copy functionality

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,7 +21,7 @@
             <button class="convertListButton" id="convertList" type="button">Convert</button>
             <label for="listOutput">Formatted list:</label>
             <textarea class="formattedText" name="listOutput" id="listOutput" cols="30" rows="5"></textarea>
-            <button class="copyButton" id="copyButton" type="button">Copy</button>
+            <button class="copyButton" type="button">Copy</button>
         </div>
 
         <div class="tab-content hidden">
@@ -30,7 +30,7 @@
             <button class="convertNodesButton" id="convertNodes" type="button">Convert</button>
             <label for="nodesOutput">Formatted nodes:</label>
             <textarea class="formattedText" name="nodesOutput" id="nodesOutput" cols="30" rows="5"></textarea>
-            <button class="copyButton" id="copyButton" type="button">Copy</button>
+            <button class="copyButton" type="button">Copy</button>
         </div>
 
         <div class="tab-content hidden">
@@ -39,7 +39,7 @@
             <button class="convertStepsButton" id="convertSteps" type="button">Convert</button>
             <label for="stepsOutput">Formatted steps:</label>
             <textarea class="formattedText" name="stepsOutput" id="stepsOutput" cols="30" rows="5"></textarea>
-            <button class="copyButton" id="copyButton" type="button">Copy</button>
+            <button class="copyButton" type="button">Copy</button>
         </div>
 
     </div>
